gitlab/gitlab-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  - name: https
    targetPort: 443
    port: 443
  - name: ssh
    targetPort: 22
    port: 22
  selector:
    app: gitlab
